--- a/client/src/components/views/NavBar/Sections/Navbar.css
+++ b/client/src/components/views/NavBar/Sections/Navbar.css
@@ -5,7 +5,7 @@
   border-bottom: solid 1px #e8e8e8;
   overflow: auto;
   box-shadow: 0 0 30px #f3f1f1;
-  background-color: white;
+  background-color: rgb(112, 112, 112);
 }
 
 .menu__logo {
@@ -38,6 +38,7 @@
 
 .menu__container .menu_left {
   float: left;
+  padding-top:10px;
 }
 
 .menu__container .menu_rigth {
