--- a/client/src/components/views/NavBar/Sections/Navbar.css
+++ b/client/src/components/views/NavBar/Sections/Navbar.css
@@ -5,10 +5,11 @@
   border-bottom: solid 1px #e8e8e8;
   overflow: auto;
   box-shadow: 0 0 30px #f3f1f1;
-  background-color: rgb(112, 112, 112);
+  background-color: rgb(255, 255, 255);
 }
 
 .menu__logo {
+  display: inline-flex;
   width: 150px;
   float: left;
 }
@@ -16,7 +17,7 @@
 .menu__logo a {
   display: inline-block;
   font-size: 20px;
-  padding: 19px 20px;
+  padding-top:10px;
 }
 
 .menu__container .ant-menu-item {
@@ -38,11 +39,12 @@
 
 .menu__container .menu_left {
   float: left;
-  padding-top:10px;
+  /* padding-top:10px; */
 }
 
 .menu__container .menu_rigth {
   float: right;
+  /* padding-top:10px; */
 }
 
 .menu__mobile-button {
