--- a/client/src/components/views/LandingPage/LandingPage.css
+++ b/client/src/components/views/LandingPage/LandingPage.css
@@ -3,3 +3,20 @@
     height: 750px;
     object-fit: cover;
 }
+
+@media (max-width: 767px) {
+    .mobile
+    {
+        display: inline-flex;
+        /* align-content: center; */
+    }
+
+    .image{
+
+        width: 100%;
+        height: 10%;
+        object-fit: cover;
+    }
+
+    
+  }
