--- a/client/src/components/views/LandingPage/LandingPage.css
+++ b/client/src/components/views/LandingPage/LandingPage.css
@@ -1,7 +1,11 @@
 .image{
-    width:1800px;
-    height: 750px;
+    width:100%;
+    height: 500px;
     object-fit: cover;
+}
+
+.img{
+width: 1200px;
 }
 
 @media (max-width: 767px) {
